...
  };

  return (
    <View>
      {!showWeather && (
        <View style={styles.buttonContainer}>
          <Button testID="show" title="show weather" onPress={getLocation} />
        </View>
      )}

      {showWeather && (
        <View>
          <View style={styles.chartContainer}>
            {dates.length > 0 && temps.length > 0 && (
              <View>
                <Text style={styles.chartTitle}>
                  Your weather for the next 12 hours
                </Text>
                <LineChart

                  data={{
                    labels,
                    datasets: [
...
